--- a/doc/references.bib
+++ b/doc/references.bib
@@ -9,42 +9,61 @@
 %   * http://tug.ctan.org/tex-archive/macros/latex/contrib/aguplus/sample.bib *
 %   ****************************************
 % 
-@ARTICLE{smit54,
-	AUTHOR = {J. G. Smith and H. K. Weston},
-	TITLE = {Nothing Particular in this Year's History},
-	YEAR = {1954},
-	JOURNAL = {J. Geophys. Res.},
-	VOLUME = {2},
-	PAGES = {14-15}
+@ARTICLE{cnntrump,
+	AUTHOR = {Kara Scannell and John Miller and Jeremy Herb and Devan Cole},
+	TITLE = {Donald Trump indicted by Manhattan grand jury on more than 30 counts related to business fraud},
+	YEAR = {2023},
+	JOURNAL = {CNN}
 }
-@BOOK{colu92,
-	AUTHOR = {Christopher Columbus},
-	TITLE = {How {I} Discovered {America}},
-	YEAR = {1492},
-	PUBLISHER = {Hispanic Press},
-	ADDRESS = {Barcelona}
+@ARTICLE{nyttrump,
+	AUTHOR = {Ben Protess and Jonah E. Bromwich and William K. Rashbaum and Kate Christobek and Nate Schweber and Sean Piccoli},
+	TITLE = {Trump Indicted in New York},
+	YEAR = {2023},
+	JOURNAL = {The New York Times}
 }
-@ARTICLE{gree00,
-	AUTHOR = {R. J. Green and U. P. Fred and W. P. Norbert},
-	TITLE = {Things that Go Bump in the Night},
-	YEAR = {1900},
-	JOURNAL = {Psych. Today},
-	VOLUME = {46},
-	PAGES = {345-678}
+@ARTICLE{wptrump,
+	AUTHOR = {Shayna Jacobs and Josh Dawsey and Devlin Barrett and Jacqueline Alemany},
+	TITLE = {Trump indicted by N.Y. grand jury, first ex-president charged with crime},
+	YEAR = {2023},
+	JOURNAL = {The Washington Post}
 }
-@ARTICLE{phil99,
-	AUTHOR = {T. P. Phillips},
-	TITLE = {Possible Influence of the Magnetosphere on {American} History},
-	YEAR = {1999},
-	JOURNAL = {J. Oddball Res.},
-	VOLUME = {98},
-	PAGES = {1000-1003}
+@ARTICLE{foxtrump,
+	AUTHOR = {Brooke Singman and Marta Dhanis},
+	TITLE = {Trump indicted after Manhattan DA probe for hush money payments},
+	YEAR = {2023},
+	JOURNAL = {Fox News}
 }
-@ARTICLE{jame76,
-	AUTHOR = {Kelly James and Harris, Jr., George and Wilby Wollops},
-	TITLE = {{American} Independence and Magnetism},
-	YEAR = {1776},
-	JOURNAL = {Revol. Tracts},
-	VOLUME = {32},
-	PAGES = {34-55}
+@ARTICLE{nyptrump,
+	AUTHOR = {Elizabeth Rosner and Ben Feuerherd and Joe Marino and Patrick Reilly},
+	TITLE = {Donald Trump indicted in Stormy Daniels hush money probe by Manhattan grand jury},
+	YEAR = {2023},
+	JOURNAL = {New York Post}
+}
+
+@ARTICLE{nbctrump,
+	AUTHOR = {Jonathan Dienst and Adam Reiss and Dareh Gregorian},
+	TITLE = {Trump indicted by Manhattan grand jury},
+	YEAR = {2023},
+	JOURNAL = {NBC News}
+}
+
+@ARTICLE{wsjtrump,
+	AUTHOR = {Corinne Ramey and Joe Palazzolo},
+	TITLE = {Grand Jury Votes to Indict Donald Trump},
+	YEAR = {2023},
+	JOURNAL = {The Wall Street Journal}
+}
+
+@ARTICLE{bbctrump,
+	AUTHOR = {Anthony Zurcher and Jude Sheerin},
+	TITLE = {Donald Trump indictment: Ex-US president to be charged over hush money},
+	YEAR = {2023},
+	JOURNAL = {BBC}
+}
+
+@ARTICLE{abctrump,
+	AUTHOR = {Aaron Katersky and John Santucci and Katherine Faulders},
+	TITLE = {Trump becomes 1st current or former president to be indicted},
+	YEAR = {2023},
+	JOURNAL = {ABC News}
 }
