started function to clean tokens

--- a/src/news.ipynb
+++ b/src/news.ipynb
@@ -66,21 +66,36 @@
     }
    ],
    "source": [
+    "# Ensure we're in the correct directory to be able to navigate to the data folder\n",
     "pwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1141"
+       "['Donald',\n",
+       " 'Trump',\n",
+       " 'faces',\n",
+       " 'more',\n",
+       " 'than',\n",
+       " '30',\n",
+       " 'counts',\n",
+       " 'related',\n",
+       " 'to',\n",
+       " 'business',\n",
+       " 'fraud',\n",
+       " 'in',\n",
+       " 'an',\n",
+       " 'indictment',\n",
+       " 'from']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,14 +103,62 @@
    "source": [
     "# example of using the function\n",
     "\n",
-    "filename = 'data/text/cnn_trump.txt'\n",
-    "text = text_to_tokens(filename)\n",
-    "len(text)"
+    "filepath = 'data/text/cnn_trump.txt'\n",
+    "text = text_to_tokens(filepath)\n",
+    "len(text)\n",
+    "text[:15]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ever', 'going', 'realize', 'laughing']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# playing around with stopwords, going through example of removing them\n",
+    "\n",
+    "stopwords_list = stopwords.words('english')\n",
+    "#print(stopwords_list)\n",
+    "\n",
+    "token_ex = ['was', 'she', 'ever', 'going',\n",
+    "             'to', 'realize', 'they', 'were', 'laughing', 'at', 'her']\n",
+    "\n",
+    "new = []\n",
+    "\n",
+    "for token in token_ex:\n",
+    "    if token not in stopwords_list:\n",
+    "        new.append(token)\n",
+    "\n",
+    "print(new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_tokens(tokens):\n",
+    "    '''Takes in a list of tokens and cleans them by converting\n",
+    "    to lowercase, removing punctuation, removing stopwords, \n",
+    "    and stemming. Returns the new list of tokens.'''\n",
+    "    new_tokens = []\n",
+    "    for token in tokens:\n",
+    "        token.lower()\n",
+    "        if token # is a stopword: pass, else: if not in new token list: append\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -182,9 +245,11 @@
     "# how all the text files will be looped through\n",
     "\n",
     "directory = 'data/text/'\n",
-    "# Display the contents of the data/ directory\n",
     "for filename in os.listdir(directory):\n",
-    "    print(os.path.join(directory, filename))"
+    "    filepath = str(os.path.join(directory, filename))\n",
+    "    # use preprocessing functions\n",
+    "    # somehow append each list of tokens (each article) to a dataframe\n",
+    "    "
    ]
   },
   {
