--- a/src/news.ipynb
+++ b/src/news.ipynb
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ever', 'going', 'realize', 'laughing']\n"
+      "['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', \"you're\", \"you've\", \"you'll\", \"you'd\", 'your', 'yours', 'yourself', 'yourselves', 'he', 'him', 'his', 'himself', 'she', \"she's\", 'her', 'hers', 'herself', 'it', \"it's\", 'its', 'itself', 'they', 'them', 'their', 'theirs', 'themselves', 'what', 'which', 'who', 'whom', 'this', 'that', \"that'll\", 'these', 'those', 'am', 'is', 'are', 'was', 'were', 'be', 'been', 'being', 'have', 'has', 'had', 'having', 'do', 'does', 'did', 'doing', 'a', 'an', 'the', 'and', 'but', 'if', 'or', 'because', 'as', 'until', 'while', 'of', 'at', 'by', 'for', 'with', 'about', 'against', 'between', 'into', 'through', 'during', 'before', 'after', 'above', 'below', 'to', 'from', 'up', 'down', 'in', 'out', 'on', 'off', 'over', 'under', 'again', 'further', 'then', 'once', 'here', 'there', 'when', 'where', 'why', 'how', 'all', 'any', 'both', 'each', 'few', 'more', 'most', 'other', 'some', 'such', 'no', 'nor', 'not', 'only', 'own', 'same', 'so', 'than', 'too', 'very', 's', 't', 'can', 'will', 'just', 'don', \"don't\", 'should', \"should've\", 'now', 'd', 'll', 'm', 'o', 're', 've', 'y', 'ain', 'aren', \"aren't\", 'couldn', \"couldn't\", 'didn', \"didn't\", 'doesn', \"doesn't\", 'hadn', \"hadn't\", 'hasn', \"hasn't\", 'haven', \"haven't\", 'isn', \"isn't\", 'ma', 'mightn', \"mightn't\", 'mustn', \"mustn't\", 'needn', \"needn't\", 'shan', \"shan't\", 'shouldn', \"shouldn't\", 'wasn', \"wasn't\", 'weren', \"weren't\", 'won', \"won't\", 'wouldn', \"wouldn't\"]\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
     "# playing around with stopwords, going through example of removing them\n",
     "\n",
     "stopwords_list = stopwords.words('english')\n",
-    "#print(stopwords_list)\n",
+    "print(stopwords_list)\n",
     "\n",
     "token_ex = ['was', 'she', 'ever', 'going',\n",
     "             'to', 'realize', 'they', 'were', 'laughing', 'at', 'her']\n",
@@ -137,7 +137,7 @@
     "    if token not in stopwords_list:\n",
     "        new.append(token)\n",
     "\n",
-    "print(new)"
+    "#print(new)"
    ]
   },
   {
@@ -257,7 +257,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# takes all docs and makes them into a dataframe\n",
+    "# make sure that docs is just a list of all the tokens from all articles\n",
+    "# first make one list of tokens for each article and then add all those lists up\n",
+    "# mode is one of \"binary\", \"count\", \"tfidf\", \"freq\"\n",
+    "tf.keras.preprocessing.text.Tokenizer(\n",
+    "    num_words=None,\n",
+    "    filters='!\"#$%&()*+,-./:;<=>?@[\\\\]^_`{|}~\\t\\n',\n",
+    "    lower=True,\n",
+    "    split=' ',\n",
+    "    char_level=False,\n",
+    "    oov_token=None,\n",
+    "    analyzer=None,\n",
+    "    **kwargs\n",
+    ")\n",
+    "\n",
+    "Xtrain = tokenizer.texts_to_matrix(docs, mode='binary')\n",
+    "print(Xtrain.shape)"
+   ]
   }
  ],
  "metadata": {
